app/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: olla

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: olla
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app
        image: bakareolamideolla/my-app
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  namespace: olla
spec:
  selector:
    app: my-app
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30050
  type: NodePort
